-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.1
-
None
-
-
fd75a66f3 (dev), 214101b1b (6.8), 34c8ff0b6 (tqtc/lts-6.5)
See the reproducer for QTBUG-111796. Drag the rotation slider and after a couple of frames it should crash with the following assert
ASSERT: "mask.width() <= c.w && mask.height() <= c.h"
This appears to have been an issue in earlier versions and was temporarily disabled by a bug in Qt 6.8.0, but will return in Qt 6.8.1.
- resulted from
-
QTBUG-111796 Qt Font Scaling for bitmap fonts is broken in Wayland
-
- Closed
-
| For Gerrit Dashboard: QTBUG-130930 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 603027,2 | Remove assert in QImageTextureGlyphCache::fillTexture() | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 603399,2 | Remove assert in QImageTextureGlyphCache::fillTexture() | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |
| 603417,2 | Remove assert in QImageTextureGlyphCache::fillTexture() | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |